--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
     <div class="row" id="rowf">
 
-      <div class="col-">
+      <div class="col- col-xl">
         <h3> My details </h3>
 
    <p><pre>
@@ -50,7 +50,7 @@ Mobile Number: 07712807349</pre> </p>
 
       </div>
 
-      <div class="col-">
+      <div class="col- col-xl">
         <h3> Qualifications </h3>
 
         <p>Hereford Cathedral School</p>
@@ -79,7 +79,7 @@ Mobile Number: 07712807349</pre> </p>
 </dl>
       </div>
 
-      <div class="col-"><h3> Other Education </h3>
+      <div class="col- col-xl"><h3> Other Education </h3>
 
       <dl>
           <dd>   BTEC Certificate in music practice (electric guitar)-PASS (Academy Of Music And Sound in Birmingham)  </dd>
@@ -93,7 +93,7 @@ Mobile Number: 07712807349</pre> </p>
 
 <div class="row" id="row2">
 
-  <div class="col-">
+  <div class="col- col-xl">
     <h1 style="text-decoration:underline">Work Experience </h1>
     <br>
     <h3 style="text-decoration:underline"> English Audio - Hereford (2009)</h3>
@@ -123,7 +123,7 @@ Mobile Number: 07712807349</pre> </p>
 
   </div>
 
-  <div class="col-">
+  <div class="col- col-xl">
 <br>
 <br>
 <br>
@@ -187,7 +187,7 @@ Mobile Number: 07712807349</pre> </p>
         <div class="carousel-item">
 
         <div class="row" id="row4">
-          <div class="col-">
+          <div class="col- col-xl">
             <h1> Personal profile </h1>
             <p>
 
