--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 </div>
     <div class="row" id="rowf">
 
-      <div class="col- col-xl">
+      <div class="col-12 col-xl">
         <h3> My details </h3>
 
    <p><pre>
 Name: Mark Struthers
 Date of Birth: 23rd of January 1987
 Nationality: British
-Address: 28 Foley Street Hereford HR1 2SG
+Address:28 Foley Street Hereford HR1 2SG
 Email: Mark_LK@hotmail.com
 Home Number:01432 379623
 Mobile Number: 07712807349</pre> </p>
