--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Mobile Number: 07712807349</pre> </p>
         <div class="carousel-item">
 
         <div class="row" id="row4">
-          <div class="col- col-xl">
+          <div class="col-12 col-xl">
             <h1> Personal profile </h1>
             <p>
 
