--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 
 
   </script>
-<div class="container-fluid">
+
   </head>
   <body>
-<div>
-
+<div class="container-fluid">
+<div class="row">
+  <div class="col-12 col-xl-12">
 <header>
   <h1 style="text-decoration:underline"> Curriculum Vitae </h1>
   <div id="navbar">
@@ -32,6 +33,8 @@
   </ul>
 </div>
 </header>
+</div>
+</div>
 
 </div>
     <div class="row" id="rowf">
