--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
   </head>
   <body>
-<div class="container-fluid">
+
 <div class="row">
   <div class="col-12 col-xl-12">
-<header>
+<div class="jumbotron">
   <h1 style="text-decoration:underline"> Curriculum Vitae </h1>
   <div id="navbar">
   <ul>
@@ -236,7 +236,7 @@ Mobile Number: 07712807349</pre> </p>
     <h3> Footer </h3>
   </div>
   </footer>
-</div>
+
 </div>
 </div>
 </html>
