--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
 
 <div class="row">
   <div class="col-12 col-xl-12">
-<div class="jumbotron">
+<div class="jumbotron-fluid">
   <h1 style="text-decoration:underline"> Curriculum Vitae </h1>
   <div id="navbar">
   <ul>
     <li><a href="https://coinmarketcap.com/currencies/streamr-datacoin/">LINK</a></li>
   </ul>
 </div>
-</header>
 </div>
 </div>
 
@@ -126,10 +125,8 @@ Mobile Number: 07712807349</pre> </p>
 
   </div>
 
-  <div class="col- col-xl">
-<br>
-<br>
-<br>
+  <div class="col- col-xl" id="col2">
+
 <h3> Wyvern Business Systems( October 2010 - May 2014) </h3>
 <p>
   A few months after my job at Amey I found a Job working at Wyvern Business Systems
