--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Mobile Number: 07712807349</pre> </p>
 <div class="carousel-inner">
 
     <div class="carousel-item active">
-    <img src="mountain.jpeg" alt="Los Angeles" width="100%" height="500">
+    <img src="mountain.jpeg" class="img-fluid" alt="Los Angeles" width="100%" height="500">
 
 
           </div>
