--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <h1 style="text-decoration:underline"> Curriculum Vitae </h1>
   <div id="navbar">
   <ul>
-    <li><a href="https://coinmarketcap.com/currencies/streamr-datacoin/">LINK</a></li>
+    <li><a href="https://www.google.com/">LINK</a></li>
   </ul>
 </div>
 </div>
