--- a/index.html
+++ b/index.html
@@ -24,21 +24,36 @@
   <body>
 
 <div class="row">
-  <div class="col-12 col-xl-12">
+  <div class="col col-xl-12">
 <div class="jumbotron-fluid">
   <h1 style="text-decoration:underline"> Curriculum Vitae </h1>
-  <div id="navbar">
-  <ul>
-    <li><a href="https://www.google.com/">LINK</a></li>
-  </ul>
 </div>
+
+<div class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+
+  <a class="navbar-brand" href="https://www.google.com/">
+  </a>
+  <ul class="navbar-nav">
+    <li class="navbar-item"><a class="navbar-link" href="https://www.google.com/"> link 1</a> </li>
+    <li class="navbar-item"><a class="navbar-link" href="https://www.google.com/"> link 1</a> </li>
+    <li class="navbar-item"><a class="navbar-link" href="https://www.google.com/"> link 1</a> </li>
+</ul>
+</div>
+
+</div>
+
+
 </div>
 </div>
 
 </div>
+
+
+
     <div class="row" id="rowf">
 
-      <div class="col- col-xl">
+      <div class="col-12 col-xl">
+
         <h3> My details </h3>
 
    <p><pre>
@@ -48,11 +63,12 @@ Nationality: British
 Address:28 Foley Street Hereford HR1 2SG
 Email: Mark_LK@hotmail.com
 Home Number:01432 379623
-Mobile Number: 07712807349</pre> </p>
+Mobile Number: 07712807349 </pre> </p>
 
-      </div>
 
-      <div class="col- col-xl">
+    </div>
+
+      <div class="col-12 col-xl">
         <h3> Qualifications </h3>
 
         <p>Hereford Cathedral School</p>
@@ -81,7 +97,7 @@ Mobile Number: 07712807349</pre> </p>
 </dl>
       </div>
 
-      <div class="col- col-xl"><h3> Other Education </h3>
+      <div class="col-12 col-xl"><h3> Other Education </h3>
 
       <dl>
           <dd>   BTEC Certificate in music practice (electric guitar)-PASS (Academy Of Music And Sound in Birmingham)  </dd>
