--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <h1 style="text-decoration:underline"> Curriculum Vitae </h1>
 </div>
 
-<div class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+<div class="navbar navbar-expand-sm bg-primary navbar-dark sticky-top">
 
   <a class="navbar-brand" href="https://www.google.com/">
   </a>
